k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: back-service
spec:
  selector:
    pod: back
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    pod: front
  ports:
  - protocol: TCP
    port: 80
    targetPort: 11000
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    pod: redis
  ports:
  - protocol: TCP
    name: redis
    port: 6379
    targetPort: 6379
  type: NodePort
